...
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp"
                    app:boxCornerRadiusTopStart="25dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
...
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp"
                    app:boxCornerRadiusTopStart="25dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
...
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp"
                    app:boxCornerRadiusTopStart="25dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cityEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

...
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp"
                    app:boxCornerRadiusTopStart="25dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ageEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
...
                        app:boxCornerRadiusBottomEnd="25dp"
                        app:boxCornerRadiusBottomStart="25dp"
                        app:boxCornerRadiusTopEnd="25dp"
                        app:boxCornerRadiusTopStart="25dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/weightEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
...
                        app:boxCornerRadiusBottomEnd="25dp"
                        app:boxCornerRadiusBottomStart="25dp"
                        app:boxCornerRadiusTopEnd="25dp"
                        app:boxCornerRadiusTopStart="25dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/heightEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

...
                    app:boxCornerRadiusTopEnd="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:endIconDrawable="@android:drawable/ic_menu_my_calendar"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birthDateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:text="Sí" />

                    <RadioButton
                        android:id="@+id/radioNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="No" />
                </RadioGroup>

...
                    android:textColor="@color/Celeste"
                    android:visibility="gone"
                    app:cornerRadius="30dp"
                    app:strokeColor="@color/Celeste" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/nextButton"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/siguiente"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/Celeste"
                    app:cornerRadius="30dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveButton"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/finalizar"
                    android:textColor="@color/white"
                    android:visibility="gone"
...
