...
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/cardProfile"
                app:layout_constraintStart_toEndOf="@id/cardProfile"
                app:layout_constraintTop_toTopOf="@id/cardProfile">

                <TextView
                    android:id="@+id/userNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hola, Usuario"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

...
