<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/house"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_recetas"
            android:icon="@drawable/archivo"
            android:title="@string/recetas" />
        <item
            android:id="@+id/nav_horas"
            android:icon="@mipmap/watch"
            android:title="@string/horas" />
        <item
            android:id="@+id/nav_mapas"
            android:icon="@drawable/maps"
            android:title="@string/mapa" />
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/editardatos" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/perfil" />
    </group>

    <item android:title="Opciones">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/cerrar_sesion" />
        </menu>
    </item>
</menu>