...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/Celeste" />

        <!-- BOTÓN DE MENÚ HAMBURGUESA -->
        <ImageView
            android:id="@+id/menuIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="45dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Menú"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />
...
